<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_joy</name>
  <version>0.0.1</version>
  <description>Very simple xbox type joystick telop controller for mobile robot</description>
  <maintainer email="kyuhyong@gmail.com">kyu2</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>joy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
